# rss-digest

./: .gitignore  CHANGELOG.md  Makefile  channels.txt  feed.xml  feeds.csv  feeds.db  rdigest.cabal  readme.md  rss-digest.cabal  template.html
app/: App.hs  DB.hs  FeedItemExtractor.hs  FetchChannelsList.hs  FetchURL.hs  GenerateRssList.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
